--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,22 +61,22 @@ h2 {
   margin: 2em 0 2em 0;
 }
 
-ul {
+.nav {
     background-color: #b2d4e7;
 }
 
-li {
+.nav li {
   float: left;
 	padding: 14px 16px;
 	color: #999a9a;
 }
 
-li a {
+.nav li a {
 	color: black;
   text-align: center;
 }
 
-li:hover {
+.nav li:hover {
     background-color: #999a9a;
 }
 
@@ -117,4 +117,38 @@ margin: 0 2em 2em 2em;
 	grid-template-columns: 25% 25% 25% 25%;
 	margin-left: 50px;
 	margin-right: 50px;
+}
+
+footer {
+  margin-top: 2em;
+  background-color: #999a9a;
+}
+
+.footer {
+ display: inline-flex;
+ margin: 2em;
+}
+
+.footer li {
+  margin-right:2em;
+}
+
+.fa {
+    padding: 1em;
+    text-align: center;
+    text-decoration: none;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
 }
