--- a/stylesheet.css
+++ b/stylesheet.css
@@ -168,9 +168,11 @@ footer {
   grid-template-columns: 33% 33% 33%;
 
 }
-
-
+.column1 {
+  display: grid;
+  grid-column: 1;
 }
+
 
 h2 {
 	font-weight: bold;
