--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 html {
   line-height: 1;
   height: 100%;
+max-width: 100%;
 }
 
 body {
