made members page responsive

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -248,6 +248,20 @@ and (max-width : 767px) {
   display: block;
 
 }
+	.officers {
+
+  display: block;
+}
+
+.board {
+
+  display: block;
+}
+
+.members {
+
+  display: block;
+}
 }
 
 
